Home page almost complete

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div id="app-list">
               <div class="app down-dog active" data-page="original-content">
                 <img
-                  src="//media.downdogapp.com/asset/Original_icon_6a0b6e40@1x.png"
+                  src="./undraw_yoga_248n.svg"
                   class="app-icon"
                   width="50"
                   height="50"
@@ -26,7 +26,7 @@
               </div>
               <div class="app hiit" data-page="hiit-content">
                 <img
-                  src="//media.downdogapp.com/asset/Hiit_icon_c02a87fc@1x.png"
+                  src="./fitness.svg"
                   class="app-icon"
                   width="50"
                   height="50"
@@ -34,7 +34,7 @@
               </div>
               <div class="app meditation" data-page="meditation-content">
                 <img
-                  src="//media.downdogapp.com/asset/Meditation_icon_b9da78eb@1x.png"
+                  src="./weightloss.svg"
                   class="app-icon"
                   width="50"
                   height="50"
@@ -42,11 +42,11 @@
               </div>
               <div class="app barre" data-page="barre-content">
                 <img
-                  src="//media.downdogapp.com/asset/Barre_icon_1feffee7@1x.png"
+                  src="./meditation.svg"
                   class="app-icon"
                   width="50"
                   height="50"
-                /><a>Extra</a>
+                /><a>Meditation</a>
               </div>
               <!-- <div class="app prenatal" data-page="prenatal-content">
                 <img
@@ -91,7 +91,7 @@
           style="background: linear-gradient(#000000, #377ef6)"
         >
           <img
-            src="./undraw_yoga_248n.svg"
+            src="./fitness.svg"
             width="340"
             class="screenshot"
           />
@@ -114,7 +114,7 @@
           style="background: linear-gradient(#157bd0, #000d53)"
         >
           <img
-            src="./undraw_yoga_248n.svg"
+            src="./weightloss.svg"
             width="340"
             class="screenshot"
           />
@@ -137,7 +137,7 @@
           style="background: linear-gradient(#3f8ccb, #baddfd)"
         >
           <img
-            src="./undraw_yoga_248n.svg"
+            src="./meditation.svg"
             width="340"
             class="screenshot"
           />
