--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Down Dog | Great Yoga Anywhere</title>
+    <title>Fit-Yoga| Anywhere Anytime</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link href="index.css" rel="stylesheet" />
   </head>
