Scroll bar removed

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Fit-Yoga| Anywhere Anytime</title>
+    <title>Fit-Yoga | Anywhere Anytime</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link href="index.css" rel="stylesheet" />
   </head>
@@ -12,7 +12,8 @@
     </div> -->
     <div class="full-width">
       <div class="left-content">
-        <div class="left-content-scrollbox">
+        <div >
+          <!-- class="left-content-scrollbox" -->
           <div class="left-content-inner">
             <div class="title hero"><span>Online Fitneess Center</span></div>
             <div id="app-list">
@@ -38,7 +39,7 @@
                   class="app-icon"
                   width="50"
                   height="50"
-                /><a>weight-loss</a>
+                /><a>weight-Loss</a>
               </div>
               <div class="app barre" data-page="barre-content">
                 <img
@@ -96,7 +97,7 @@
             class="screenshot"
           />
           <div class="content-text">
-            <h2>HIIT</h2>
+            <h2>Fitness</h2>
             <span
               >Turn up the intensity with High Intensity Interval Training. Use
               your own body weight to get your heart rate up and efficiently
@@ -119,7 +120,7 @@
             class="screenshot"
           />
           <div class="content-text">
-            <h2>Meditation</h2>
+            <h2>Weight-Loss</h2>
             <span
               >Take a mindful moment to breathe and reflect, with Down Dog's
               calming meditation app.</span
@@ -142,7 +143,7 @@
             class="screenshot"
           />
           <div class="content-text">
-            <h2>Barre</h2>
+            <h2>Meditation</h2>
             <span
               >Get lean, fit, and toned with a new ballet-inspired workout every
               day. Boost thighs, glutes, or core for an extra muscle-shaking
@@ -176,6 +177,9 @@
             </div>
           </div>
         </div> -->
+
+            
+
       </div>
     </div>
 
