added gif to yoga page

--- a/yoga.html
+++ b/yoga.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yoga</title>
-</head>
-<body>
-    <h1>This is Yoga Page</h1>
-</body>
+    <link href="yoga.css" rel="stylesheet" />
+  </head>
+  <body>
+    <div class="container1">
+      <h1>Unlish the power of yoga</h1>
+      <p>
+        This example creates a full page background image. Try to resize the
+        browser window to see how it always will cover the full screen (when
+        scrolled to top), and that it scales nicely on all screen sizes.
+      </p>
+      <img src="./nik-gf.gif" alt="Girl in a jacket" width="500" height="600">
+    </div>
+  </body>
 </html>
