--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
           />
           <div class="content-text">
             <h2>Yoga</h2>
-            <span
-              >Select your time, level, focus, voice, and music, and Down Dog
-              creates a unique, personalized yoga practice every time.</span
-            >
+            <span>
+              Improves strength, balance and flexibility, helps with back pain relief, benefits heart health, helps you manage stress. Let's start.
+            </span>
+
             <div class="download-buttons-container">
               <a href="/yoga.html" target="_blank">
                 <div class="download-button web"><span>START</span></div> </a
@@ -99,9 +99,7 @@
           <div class="content-text">
             <h2>Fitness</h2>
             <span
-              >Turn up the intensity with High Intensity Interval Training. Use
-              your own body weight to get your heart rate up and efficiently
-              burn fat while building muscle - no fancy props required.</span
+              >Manage your weight better, reduce your risk of a heart attack, have lower blood pressure, keep healthier state of mind. Let's start.</span
             >
             <div class="download-buttons-container">
               <a href="/yoga.html" target="_blank">
@@ -122,8 +120,7 @@
           <div class="content-text">
             <h2>Weight-Loss</h2>
             <span
-              >Take a mindful moment to breathe and reflect, with Down Dog's
-              calming meditation app.</span
+              >Reduce- heartburn, blood pressure, knee pain; improve- energy, sleep; more self esteem. Let's start.</span
             >
             <div class="download-buttons-container">
               <a href="/yoga.html" target="_blank">
@@ -145,9 +142,7 @@
           <div class="content-text">
             <h2>Meditation</h2>
             <span
-              >Get lean, fit, and toned with a new ballet-inspired workout every
-              day. Boost thighs, glutes, or core for an extra muscle-shaking
-              challenge.</span
+              >Focusing on the present, building skills to manage your stress, gaining a new perspective on stressful situations, increasing imagination and creativity, increasing patience and tolerance. Let's start.</span
             >
             <div class="download-buttons-container">
               <a href="/yoga.html" target="_blank">
