Yoga page completed

--- a/yoga.html
+++ b/yoga.html
@@ -8,13 +8,95 @@
   </head>
   <body>
     <div class="container1">
+      <img class = "bg-image"src="./yoga-bg1.jpg" width="100%" height="fit-content"  />
+      <div class="text-block">
       <h1>Unlish the power of yoga</h1>
       <p>
         This example creates a full page background image. Try to resize the
         browser window to see how it always will cover the full screen (when
         scrolled to top), and that it scales nicely on all screen sizes.
       </p>
-      <img src="./nik-gf.gif" alt="Girl in a jacket" width="500" height="600">
+    </div>
+    </div>
+
+    <div class="row">
+      <div class="column">
+        <div class="card">
+          <img class="card-image" alt="Avatar" src="./surya-namskar.jpg" />
+          <h3>Surya Namaskar</h3>
+          <p>
+            Benifits of Surya Namaskar Warms up and prepares the body for asana
+            practice. Lubricates and increases the blood supply to the joints.
+            Stretches and strengthens the whole body. Improves efficiency of the
+            internal organs. Stimulates
+            pingala/surya nadi which increases energy and stimulates digestion.
+            Increases the prana in the body and helps to remove energy
+            blockages.
+            Helps to balance the endocrine system. Beeja mantras strengthen the
+            heart. The particular breathing sequence strengthens the lungs.
+          </p>
+          <h4>To practice click below</h4>
+          <a href="https://www.google.com/" target="_blank">
+            <img
+              src="YouTube-logo.png"
+              alt="HTML tutorial"
+              style="width: 4rem; height: 4rem"
+            />
+          </a>
+        </div>
+      </div>
+
+      <div class="column">
+        <div class="card">
+          <img
+            class="card-image"
+            alt="Avatar"
+            src="./kapalbhati-pranayama.jpg"
+          />
+          <h3>Kapalbhati pranayama</h3>
+          <p>
+            <h5 style="font-size: bold">Kapal = forehead; bhati = shining; pranayama = breathing technique</h5>
+            Benifits of Surya Namaskar Kapalbhati pranayama relaxes the eyes,
+            and as a result of that, can help do away with dark circles as well
+            as premature signs of aging. It improves blood circulation and
+            digestion. It is known to help with weight loss since it increases
+            your metabolic rate rapidly.
+          </p>
+          <h4>To practice click below</h4>
+          <a href="https://www.google.com/" target="_blank">
+            <img
+              src="YouTube-logo.png"
+              alt="HTML tutorial"
+              style="width: 4rem; height: 4rem"
+            />
+          </a>
+        </div>
+      </div>
+
+      <div class="column">
+        <div class="card">
+          <img
+            class="card-image"
+            alt="Avatar"
+            src="./anulom-wilom.jpg"
+          />
+          <h3>Kapalbhati pranayama</h3>
+          <p>
+            We can reduce stress by performing this exercise and in turn improve the overall performance of the body. This also helps us keep ailments like depression and anxiety at bay. Even the way our brain functions improves.
+            Anulom vilom breathing is also good for the skin. Skin is the largest organ of the body, and it can be affected by stress, as well as respiratory and cardiovascular health.
+        </p>
+        <h4>To practice click below</h4>
+          <a href="https://www.google.com/" target="_blank">
+            <img
+              src="YouTube-logo.png"
+              alt="HTML tutorial"
+              style="width: 4rem; height: 4rem"
+            />
+          </a>
+        </div>
+      </div>
+
+
     </div>
   </body>
 </html>
