added heading to yaga page

--- a/yoga.html
+++ b/yoga.html
@@ -12,9 +12,7 @@
       <div class="text-block">
       <h1>Unlish the power of yoga</h1>
       <p>
-        This example creates a full page background image. Try to resize the
-        browser window to see how it always will cover the full screen (when
-        scrolled to top), and that it scales nicely on all screen sizes.
+        Yoga's incorporation of meditation and breathing can help improve a person's mental well-being. “Regular yoga practice creates mental clarity and calmness; increases body awareness; relieves chronic stress patterns; relaxes the mind; centers attention; and sharpens concentration
       </p>
     </div>
     </div>
