added weight-loss page

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
               >Reduce- heartburn, blood pressure, knee pain; improve- energy, sleep; more self esteem. Let's start.</span
             >
             <div class="download-buttons-container">
-              <a href="/yoga.html" target="_blank">
+              <a href="/WeightLossFolder/weightLoss.html" target="_blank">
                 <div class="download-button web"><span>START</span></div> 
                 </a>
             </div>
