--- a/WeightLossFolder/weightLoss.html
+++ b/WeightLossFolder/weightLoss.html
@@ -63,7 +63,14 @@
             <img class="card-image" src="./burp.jpg">
             <h3>Burpee</h3>
             <p>A burpee is essentially a two-part exercise: a pushup followed by a leap in the air. Doing several burpees in a row can be tiring, but this versatile exercise may be worth the payoff, especially if you're looking for a way to build strength and endurance, while burning calories, and boosting your cardio fitness.</p>
-            <button>Click me</button>
+            <h4>To practice click below</h4>
+              <a href="https://www.google.com/" target="_blank">
+              <img
+                src="YouTube-logo.png"
+                alt="HTML tutorial"
+                style="width: 4rem; height: 4rem"
+              />
+              </a>
           </div>
         </div>
         
@@ -72,7 +79,14 @@
             <img class="card-image" src="./Pilates-Teaser.jpg">
             <h3>Pilates Teaser</h3>
             <p>The Teaser is an original Pilates exercise performed in a mat workout. It's a terrific exercise for balance, flexibility and spinal mobility because it incorporates the entire core and back to keep you upright in a V position on your sits bones.</p>
-            <button>Click me</button>
+            <h4>To practice click below</h4>
+              <a href="https://www.google.com/" target="_blank">
+              <img
+                src="YouTube-logo.png"
+                alt="HTML tutorial"
+                style="width: 4rem; height: 4rem"
+              />
+              </a>
           </div>
         </div>
     </div>
