--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                   class="app-icon"
                   width="50"
                   height="50"
-                /><a>Fitness</a>
+                /><a>Exercise</a>
               </div>
               <div class="app meditation" data-page="meditation-content">
                 <img
