connected fitness page to homepage

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               >Manage your weight better, reduce your risk of a heart attack, have lower blood pressure, keep healthier state of mind. Let's start.</span
             >
             <div class="download-buttons-container">
-              <a href="/yoga.html" target="_blank">
+              <a href="/fitness-folder/fitness.html" target="_blank">
                 <div class="download-button web"><span>START</span></div> 
               </a>
            </div>
