changes in home page

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             class="screenshot"
           />
           <div class="content-text">
-            <h2>Fitness</h2>
+            <h2>Exercise</h2>
             <span
               >Manage your weight better, reduce your risk of a heart attack, have lower blood pressure, keep healthier state of mind. Let's start.</span
             >
