--- a/fitness-folder/fitness.html
+++ b/fitness-folder/fitness.html
@@ -26,13 +26,9 @@
             Aerobic exercise, which speeds up your heart rate and breathing, is important for many body functions. It gives your heart and lungs a workout and increases endurance. 
             Aerobic exercise also helps relax blood vessel walls, lower blood pressure, burn body fat, lower blood sugar levels, reduce inflammation, boost mood, and raise "good" HDL cholesterol. Combined with weight loss, it can lower "bad" LDL cholesterol levels, too. Over the long term, aerobic exercise reduces your risk of heart disease, stroke, type 2 diabetes, breast and colon cancer, depression, and falls.
           </p>
-          <h4>To practice click below</h4>
+          <h4>For tutorial click below link </h4>
           <a href="https://www.google.com/" target="_blank">
-            <img
-              src="../YouTube-logo.png"
-              alt="HTML tutorial"
-              style="width: 4rem; height: 4rem"
-            />
+            <button class="button">Click Me</button>
           </a>
         </div>
       </div>
@@ -49,13 +45,9 @@
             As we age, we lose muscle mass. Strength training builds it back. "Regular strength training will help you feel more confident and capable of daily tasks like carrying groceries, gardening, and lifting heavier objects around the house. Strength training will also help you stand up from a chair, get up off the floor, and go up stairs.
             Strengthening your muscles not only makes you stronger, but also stimulates bone growth, lowers blood sugar, assists with weight control, improves balance and posture, and reduces stress and pain in the lower back and joints.
           </p>
-          <h4>To practice click below</h4>
+          <h4>For tutorial click below link </h4>
           <a href="https://www.google.com/" target="_blank">
-            <img
-              src="../YouTube-logo.png"
-              alt="HTML tutorial"
-              style="width: 4rem; height: 4rem"
-            />
+            <button class="button">Click Me</button>
           </a>
         </div>
       </div>
@@ -72,13 +64,9 @@
             Stretching helps maintain flexibility. We often overlook that in youth, when our muscles are healthier. But aging leads to a loss of flexibility in the muscles and tendons. Muscles shorten and don't function properly. That increases the risk for muscle cramps and pain, muscle damage, strains, joint pain, and falling, and it also makes it tough to get through daily activities, such as bending down to tie your shoes.
             Likewise, stretching the muscles routinely makes them longer and more flexible, which increases your range of motion and reduces pain and the risk for injury.
         </p>
-        <h4>To practice click below</h4>
+        <h4>For tutorial click below link </h4>
           <a href="https://www.google.com/" target="_blank">
-            <img
-              src="../YouTube-logo.png"
-              alt="HTML tutorial"
-              style="width: 4rem; height: 4rem"
-            />
+            <button class="button">Click Me</button>
           </a>
         </div>
       </div>
