--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>Fit-Yoga | Anywhere Anytime</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="index.css" rel="stylesheet" />
   </head>
   <body>
@@ -88,6 +89,8 @@
           </div>
         </div>
         <div
+
+
           class="content hiit-content"
           style="background: linear-gradient(#000000, #377ef6)"
         >
