--- a/yoga.html
+++ b/yoga.html
@@ -25,21 +25,16 @@
           <p>
             Benifits of Surya Namaskar Warms up and prepares the body for asana
             practice. Lubricates and increases the blood supply to the joints.
-            Stretches and strengthens the whole body. Improves efficiency of the
-            internal organs. Stimulates
+            Stretches and strengthens the whole body. Stimulates
             pingala/surya nadi which increases energy and stimulates digestion.
             Increases the prana in the body and helps to remove energy
             blockages.
             Helps to balance the endocrine system. Beeja mantras strengthen the
             heart. The particular breathing sequence strengthens the lungs.
           </p>
-          <h4>To practice click below</h4>
+          <h4>For tutorial click below link </h4>
           <a href="https://www.google.com/" target="_blank">
-            <img
-              src="YouTube-logo.png"
-              alt="HTML tutorial"
-              style="width: 4rem; height: 4rem"
-            />
+            <button class="button">Click Me</button>
           </a>
         </div>
       </div>
@@ -60,13 +55,9 @@
             digestion. It is known to help with weight loss since it increases
             your metabolic rate rapidly.
           </p>
-          <h4>To practice click below</h4>
+          <h4>For tutorial click below link </h4>
           <a href="https://www.google.com/" target="_blank">
-            <img
-              src="YouTube-logo.png"
-              alt="HTML tutorial"
-              style="width: 4rem; height: 4rem"
-            />
+            <button class="button">Click Me</button>
           </a>
         </div>
       </div>
@@ -83,13 +74,9 @@
             We can reduce stress by performing this exercise and in turn improve the overall performance of the body. This also helps us keep ailments like depression and anxiety at bay. Even the way our brain functions improves.
             Anulom vilom breathing is also good for the skin. Skin is the largest organ of the body, and it can be affected by stress, as well as respiratory and cardiovascular health.
         </p>
-        <h4>To practice click below</h4>
+        <h4>For tutorial click below link </h4>
           <a href="https://www.google.com/" target="_blank">
-            <img
-              src="YouTube-logo.png"
-              alt="HTML tutorial"
-              style="width: 4rem; height: 4rem"
-            />
+            <button class="button">Click Me</button>
           </a>
         </div>
       </div>
