added header and footer to meditation and yoga page

--- a/fitness-folder/fitness.html
+++ b/fitness-folder/fitness.html
@@ -6,11 +6,28 @@
     <title>Exercise</title>
     <link href="./fitness.css" rel="stylesheet" />
   </head>
-  <body>
+  <body style= "margin-right:0">
+
+    <nav class="navigation container">
+        <h2 class="nav-name">Exercise</h2>
+  
+        <!-- <ul class="list-no-bullet nav-pills">
+            <li class="list-for-itemInline">
+                <a class="link" href="/">Home</a>
+            </li>
+            <li class="list-for-itemInline">
+                <a class="link" href="/">Products</a>
+            </li>
+            <li class="list-for-itemInline">
+                <a class="link" href="/">About</a>
+            </li>
+        </ul> -->
+    </nav>
+
     <div class="container1">
       <img class = "bg-image"src="./exercise-background.jpg" width="100%" height="fit-content"  />
       <div class="text-block">
-      <h1>Your body is your grestest investment</h1>
+      <h3>Your body is your grestest investment</h3>
       <p>
         Exercise is one of the most important factors in a persons’ life.  Physical activity, or the lack of it, can result in a person having a healthy life or cause them to have diabetes.  The benefits of exercise are countless. The positive health results, the improvement in attitude, even better academic performance are all factors which make not exercising inexcusable.
       </p>
@@ -93,5 +110,21 @@
       </div> -->
 
     </div>
+
+    <footer  class="footer">
+        <div  class="footer-header">Contact us at: </div>
+        <ul  class="social-links list-no-bullet">
+            <a class="link" href="https://www.google.com/">
+                <li class="sm list-for-itemInline">Github</li>
+            </a>
+            <a class="link" href="https://www.google.com/">
+                <li class="sm list-for-itemInline">Instagram</li>
+            </a>
+            <a class="link" href="https://www.google.com/">
+                <li class="sm list-for-itemInline">LinkedIn</li>
+            </a>
+        </ul>
+    </footer>
+    
   </body>
 </html>
