--- a/yoga.html
+++ b/yoga.html
@@ -7,6 +7,23 @@
     <link href="yoga.css" rel="stylesheet" />
   </head>
   <body>
+
+    <nav class="navigation container">
+        <h2 class="nav-name">Exercise</h2>
+  
+        <!-- <ul class="list-no-bullet nav-pills">
+            <li class="list-for-itemInline">
+                <a class="link" href="/">Home</a>
+            </li>
+            <li class="list-for-itemInline">
+                <a class="link" href="/">Products</a>
+            </li>
+            <li class="list-for-itemInline">
+                <a class="link" href="/">About</a>
+            </li>
+        </ul> -->
+    </nav>
+    
     <div class="container1">
       <img class = "bg-image"src="./yoga-bg1.jpg" width="100%" height="fit-content"  />
       <div class="text-block">
@@ -83,5 +100,21 @@
 
 
     </div>
+
+    <footer  class="footer">
+        <div  class="footer-header">Contact us at: </div>
+        <ul  class="social-links list-no-bullet">
+            <a class="link" href="https://www.google.com/">
+                <li class="sm list-for-itemInline">Github</li>
+            </a>
+            <a class="link" href="https://www.google.com/">
+                <li class="sm list-for-itemInline">Instagram</li>
+            </a>
+            <a class="link" href="https://www.google.com/">
+                <li class="sm list-for-itemInline">LinkedIn</li>
+            </a>
+        </ul>
+    </footer>
+
   </body>
 </html>
