added links to yputube videos

--- a/fitness-folder/fitness.html
+++ b/fitness-folder/fitness.html
@@ -44,7 +44,7 @@
             Aerobic exercise also helps relax blood vessel walls, lower blood pressure, burn body fat, lower blood sugar levels, reduce inflammation, boost mood, and raise "good" HDL cholesterol. Combined with weight loss, it can lower "bad" LDL cholesterol levels, too. Over the long term, aerobic exercise reduces your risk of heart disease, stroke, type 2 diabetes, breast and colon cancer, depression, and falls.
           </p>
           <h4>For tutorial click below link </h4>
-          <a href="https://www.google.com/" target="_blank">
+          <a href="https://www.youtube.com/watch?v=ml6cT4AZdqI" target="_blank">
             <button class="button">Click Me</button>
           </a>
         </div>
@@ -63,7 +63,7 @@
             Strengthening your muscles not only makes you stronger, but also stimulates bone growth, lowers blood sugar, assists with weight control, improves balance and posture, and reduces stress and pain in the lower back and joints.
           </p>
           <h4>For tutorial click below link </h4>
-          <a href="https://www.google.com/" target="_blank">
+          <a href="https://www.youtube.com/watch?v=WIHy-ZnSndA" target="_blank">
             <button class="button">Click Me</button>
           </a>
         </div>
@@ -82,7 +82,7 @@
             Likewise, stretching the muscles routinely makes them longer and more flexible, which increases your range of motion and reduces pain and the risk for injury.
         </p>
         <h4>For tutorial click below link </h4>
-          <a href="https://www.google.com/" target="_blank">
+          <a href="https://www.youtube.com/watch?v=y9fNh7cYo64" target="_blank">
             <button class="button">Click Me</button>
           </a>
         </div>
