--- a/yoga.html
+++ b/yoga.html
@@ -23,7 +23,7 @@
             </li>
         </ul> -->
     </nav>
-    
+
     <div class="container1">
       <img class = "bg-image"src="./yoga-bg1.jpg" width="100%" height="fit-content"  />
       <div class="text-block">
@@ -50,7 +50,7 @@
             heart. The particular breathing sequence strengthens the lungs.
           </p>
           <h4>For tutorial click below link </h4>
-          <a href="https://www.google.com/" target="_blank">
+          <a href="https://www.youtube.com/watch?v=l1C0rD_DlUE" target="_blank">
             <button class="button">Click Me</button>
           </a>
         </div>
@@ -73,7 +73,7 @@
             your metabolic rate rapidly.
           </p>
           <h4>For tutorial click below link </h4>
-          <a href="https://www.google.com/" target="_blank">
+          <a href="https://www.youtube.com/watch?v=bY00OwIjPj8" target="_blank">
             <button class="button">Click Me</button>
           </a>
         </div>
@@ -86,13 +86,13 @@
             alt="Avatar"
             src="./anulom-wilom.jpg"
           />
-          <h3>Kapalbhati pranayama</h3>
+          <h3>anulom vilom pranayam </h3>
           <p>
             We can reduce stress by performing this exercise and in turn improve the overall performance of the body. This also helps us keep ailments like depression and anxiety at bay. Even the way our brain functions improves.
             Anulom vilom breathing is also good for the skin. Skin is the largest organ of the body, and it can be affected by stress, as well as respiratory and cardiovascular health.
         </p>
         <h4>For tutorial click below link </h4>
-          <a href="https://www.google.com/" target="_blank">
+          <a href="https://www.youtube.com/watch?v=QOgKutspaNY" target="_blank">
             <button class="button">Click Me</button>
           </a>
         </div>
