--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div >
           <!-- class="left-content-scrollbox" -->
           <div class="left-content-inner">
-            <div class="title hero"><span>Online Fitneess Center</span></div>
+            <div class="title hero"><span>Online FitnessGuru</span></div>
             <div id="app-list">
               <div class="app down-dog active" data-page="original-content">
                 <img
