--- a/yoga.html
+++ b/yoga.html
@@ -9,7 +9,7 @@
   <body>
 
     <nav class="navigation container">
-        <h2 class="nav-name">Exercise</h2>
+        <h1 class="nav-name">Yoga</h1>
   
         <!-- <ul class="list-no-bullet nav-pills">
             <li class="list-for-itemInline">
