--- a/index.html
+++ b/index.html
@@ -3,15 +3,24 @@
     <title>Fit-Yoga | Anywhere Anytime</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.svg" />
     <link href="index.css" rel="stylesheet" />
   </head>
   <body>
     
+
     <div class="full-width">
-      <div class="left-content">
+      <div class="left-content" >
         <div >
           <div class="left-content-inner">
-            <div class="title hero"><span>Online FitnessGuru</span></div>
+            <div class="title hero"><span>Online FitnessGuru</span>
+                <img
+                src="./favicon.svg"
+                class="app-icon"
+                width="50"
+                height="50"
+              />
+            </div>
             <div id="app-list">
               <div class="app down-dog active" data-page="original-content">
                 <img
@@ -51,7 +60,7 @@
       </div>
 
       <!-- right-side-content -->
-      <div class="right-content" id="original-content">
+      <div class="right-content" id="original-content ">
         <div
           class="content original-content selected"
           style="background: linear-gradient(#157bd0, #add8ff)"
