--- a/fitness-folder/fitness.html
+++ b/fitness-folder/fitness.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Exercise</title>
+    <link rel="shortcut icon" type="image/x-icon" href="../favicon.svg" />
     <link href="./fitness.css" rel="stylesheet" />
   </head>
   <body style= "margin-right:0">
